# slippi-rs

./: Cargo.toml  README.md
src/: error.rs  lib.rs  types.rs
src/console/: communication.rs  mod.rs
src/melee/: animations.rs  characters.rs  mod.rs  moves.rs  stages.rs
